			ROX-Session
			A very simple session manager
			by Thomas Leonard

01-Jan-2001
~~~~~~~~~~~
Improved the icon (slightly).

19-Dec-2000
~~~~~~~~~~~
Fixed a minor compiler warning (Bernard Jungen).

10-Nov-2000 (Release 0.1.10)
~~~~~~~~~~~
Fixed a bug which prevented ROX-Session from working under most systems:
waitpid() was called even though ROX-Session was ignoring child processes
(spotted by Stephen Watson).

07-Sep-2000
~~~~~~~~~~~
Fixed some bash-only problems (Bernard Jungen).