@@ -1,0 +1,17 @@
+/*
+ * $Id$
+ *
+ * ROX-Session, a very simple session manager
+ * By Thomas Leonard, <tal197@users.sourceforge.net>.
+ */
+
+#ifndef _LOG_H
+#define _LOG_H
+
+int	login_error;	/* Non-zero => error (-1 or exit status) */
+
+/* Prototypes */
+
+void log_init(void);
+
+#endif /* _LOG_H */
